--- a/org.openwms/trunk/core/org.openwms.core.service.api/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.service.api/pom.xml
@@ -33,7 +33,7 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>..</moduleDir>
+        <moduleDir>../..</moduleDir>
     </properties>
     <build>
         <plugins>
@@ -50,8 +50,13 @@
             </plugin>
         </plugins>
     </build>
-    <!-- Project dependencies -->
     <dependencies>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>com.springsource.javax.persistence</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <!-- Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
