--- a/org.openwms/trunk/core/org.openwms.core.util/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.core.util/pom.xml
@@ -33,16 +33,9 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>..</moduleDir>
-        <openwms.configuration.version>0.0.1-SNAPSHOT</openwms.configuration.version>
+        <moduleDir>../..</moduleDir>
     </properties>
     <build>
-        <resources>
-          <resource>
-            <directory>src/main/resources</directory>
-            <filtering>true</filtering>
-          </resource>
-        </resources>
         <plugins>
             <plugin>
                 <groupId>com.springsource.bundlor</groupId>
