--- a/org.openwms/trunk/core/pom.xml
+++ b/org.openwms/trunk/core/pom.xml
@@ -35,20 +35,12 @@
     <packaging>pom</packaging>
     <name>OpenWMS.org CORE Project</name>
     <properties>
-        <moduleDir>.</moduleDir>
+        <moduleDir>..</moduleDir>
+        <property.org.graniteds-core.version>1.2.0_SP1</property.org.graniteds-core.version>
+        <bundle.version>0.0.1.SNAPSHOT</bundle.version>
     </properties>
 
     <distributionManagement>
-        <repository>
-            <id>${distribution.repo.serverId}</id>
-            <name>OpenWMS.org Release Repository</name>
-            <url>${distribution.repo.serverProtocol}//${distribution.repo.serverUrl.rootPath}</url>
-        </repository>
-        <snapshotRepository>
-            <id>${distribution.repo.serverId}</id>
-            <name>OpenWMS.org Snapshot Repository</name>
-            <url>${distribution.repo.serverProtocol}//${distribution.repo.snapshot.serverUrl.rootPath}</url>
-        </snapshotRepository>
         <site>
             <id>${distribution.serverId}</id>
             <name>OpenWMS.org WebSite</name>
@@ -62,6 +54,28 @@
         <url>http://openwms2005.svn.sourceforge.net/viewvc/openwms2005/org.openwms/trunk/core</url>
     </scm>
     
+    <profiles>
+        <profile>
+            <id>all</id>
+            <modules>
+                <module>org.openwms.core.domain</module>
+                <module>org.openwms.core.domain.as</module>
+                <module>org.openwms.core.framework.test</module>
+                <module>org.openwms.core.infrastructure.configuration</module>
+                <module>org.openwms.core.infrastructure.hsql</module>
+                <module>org.openwms.core.infrastructure.oracle</module>
+                <module>org.openwms.core.infrastructure.postgres</module>
+                <module>org.openwms.core.integration</module>
+                <module>org.openwms.core.integration.eclipselink</module>
+                <module>org.openwms.core.integration.hibernate</module>
+                <module>org.openwms.core.integration.jpa</module>
+                <module>org.openwms.core.service.api</module>
+                <module>org.openwms.core.service.spring</module>
+                <module>org.openwms.core.util</module>
+            </modules>
+        </profile>
+    </profiles>
+
 	<dependencyManagement>
 	    <dependencies>
 	        <!-- Project dependencies -->
@@ -87,6 +101,7 @@
 	            <groupId>${project.groupId}</groupId>
 	            <artifactId>org.openwms.core.infrastructure.configuration</artifactId>
 	            <version>${project.version}</version>
+	            <type>properties</type>
 	        </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
@@ -135,32 +150,10 @@
 	        </dependency>
 	        <dependency>
 	            <groupId>${project.groupId}</groupId>
-	            <artifactId>org.openwms.common.util</artifactId>
+	            <artifactId>org.openwms.core.util</artifactId>
 	            <version>${project.version}</version>
 	        </dependency>
 	    </dependencies>
 	</dependencyManagement>
 	
-    <profiles>
-        <profile>
-            <id>all</id>
-            <modules>
-                <module>org.openwms.core.domain</module>
-                <module>org.openwms.core.domain.as</module>
-                <module>org.openwms.core.framework.test</module>
-                <module>org.openwms.core.infrastructure.configuration</module>
-                <module>org.openwms.core.infrastructure.hsql</module>
-                <module>org.openwms.core.infrastructure.oracle</module>
-                <module>org.openwms.core.infrastructure.postgres</module>
-                <module>org.openwms.core.integration</module>
-                <module>org.openwms.core.integration.eclipselink</module>
-                <module>org.openwms.core.integration.hibernate</module>
-                <module>org.openwms.core.integration.jpa</module>
-                <module>org.openwms.core.service.api</module>
-                <module>org.openwms.core.service.spring</module>
-                <module>org.openwms.core.util</module>
-            </modules>
-        </profile>
-    </profiles>
-
 </project>
