--- a/org.openwms/trunk/common/org.openwms.common.service.api/pom.xml
+++ b/org.openwms/trunk/common/org.openwms.common.service.api/pom.xml
@@ -33,7 +33,7 @@
     <packaging>jar</packaging>
     <name>${project.artifactId}</name>
     <properties>
-        <moduleDir>..</moduleDir>
+        <moduleDir>../..</moduleDir>
     </properties>
     <build>
         <plugins>
@@ -50,13 +50,8 @@
             </plugin>
         </plugins>
     </build>
-    <!-- Project dependencies -->
     <dependencies>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.common.domain</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!-- CORE Project dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>org.openwms.core.domain</artifactId>
@@ -69,5 +64,11 @@
 	        <version>${core.version}</version>
 	        <scope>provided</scope>
 	    </dependency>
+        <!-- Project dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>org.openwms.common.domain</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
