--- a/org.openwms/trunk/core/org.openwms.client.flex.lib/pom.xml
+++ b/org.openwms/trunk/core/org.openwms.client.flex.lib/pom.xml
@@ -100,6 +100,7 @@
 			        <dependency>
 			            <groupId>${project.groupId}</groupId>
 			            <artifactId>org.openwms.core.domain.as</artifactId>
+			            <version>${project.version}</version>
 			            <type>swc</type>
 			        </dependency>
 				</dependencies>
